--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body>
     <div class="container">
         <div class="slide mclr">
-            <h3>McLaren 620R</h3>
+            <h3>McLaren 570S</h3>
         </div>
         <div class="slide ferrari">
-            <h3>Ferrari</h3>
+            <h3>Ferrari 488GTB</h3>
         </div>
-        <div class="slide mclr">
-            <h3>Praha, Czech Republic</h3>
+        <div class="slide mb">
+            <h3>Mercedes-Benz E63</h3>
         </div>
-        <div class="slide mclr">
-            <h3>Москва, Россия</h3>
+        <div class="slide bugatti">
+            <h3>Bugatti Chiron</h3>
         </div>
-        <div class="slide mclr">
-            <h3>Москва, Россия</h3>
+        <div class="slide mbg">
+            <h3>Mercedes-AMG G63</h3>
         </div>
     </div>
     <script src="script.js"></script>
