--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <h3 class="title">Card Slider</h3>
+<section class="slider-menu">
     <div class="container">
         <div class="slide mclr">
             <h3>McLaren 570S</h3>
@@ -27,6 +29,7 @@
         </div>
     </div>
     <script src="script.js"></script>
+</section>
 </body>
 
 </html>
